--- a/sass/layouts/_client.scss
+++ b/sass/layouts/_client.scss
@@ -2,6 +2,9 @@
   padding-top: 94px;
   padding-bottom: 94px;
   /* background: #F5F5F5; */
+  @media screen and (max-width: 481px) {
+    padding: 60px 0;
+  }
 }
 
 .sectio__title {
@@ -23,7 +26,7 @@
 
 .client__item {
   width: calc((100% - 30px) / 2);
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 767px) {
   width: calc((100% - 60px) / 3);
  }
   @media screen and (min-width: 1200px) {
