--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -2,7 +2,7 @@ body {
   background-color: var(--primary-bg-color);
   color: var(--primary-text-color);
   font-family: "Roboto", sans-serif;
-  letter-spacing: 0.03em;
+  // letter-spacing: 0.03em;
 }
 .list {
   list-style: none;
@@ -12,5 +12,9 @@ body {
 }
 
 .no-scroll {
+  overflow: hidden;
+}
+
+body.modal-open {
   overflow: hidden;
 }
