--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,35 +3,45 @@
   top: 0;
   width: 100%;
   height: 100%;
+  padding: 93px 15px;
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity var(--transition-time), visibility var(--transition-time);
-  @media screen and (min-width: 480px) {
-  width: 100vw;
-  height: 100vh;
-  // padding-left: 40px;
-  // padding-right: 45px;
   overflow-y: scroll;
+  @media screen and (max-width: 576px) {
+  padding: 93px 15px;
+  }
+  @media screen and (min-width: 577px) {
+  padding: 208px 159px;
+  }
+   @media screen and (min-width: 960px) {
+   padding: 222px 536px;
  }
 }
 
 .modal {
-  width: 528px;
-  min-height: 581px;
   padding: 40px;
+  background-color: var(--primary-bg-color);
+  @media screen and (min-width: 480px) {
+  width: 450px;
+  min-height: 609px;
+  }
+  @media screen and (min-width: 577px) {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scaleX(1);
   transition: transform var(--transition-time);
-  background-color: var(--primary-bg-color);
-  @media screen and (min-width: 480px) {
-    width: 100%;
-    padding: 15px;
+  width: 450px;
+  min-height: 609px;
   }
-   @media screen and (min-width: 768px) {
-    width: 528px;
-    min-height: 581px;
-    padding: 15px;
+  @media screen and (min-width: 960px) {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scaleX(1);
+  transition: transform var(--transition-time);
+  width: 528px;
+  min-height: 581px;
   }
 }
 
@@ -55,6 +65,17 @@
   cursor: pointer;
   outline-color: var(--accent-color);
   transition: transform var(--transition-time);
+  @media screen and (max-width: 576px) {
+  position: absolute;
+  top: 102px;
+  right: 25px;
+  transition: transform var(--transition-time);
+  }
+  // @media screen and (min-width: 577px) {
+  // position: absolute;
+  // top: 8px;
+  // right: 10px;
+  // }
 }
 
 .icon-close {
@@ -93,6 +114,20 @@
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+  @media screen and (max-width: 576px) {
+  width: 370px;
+  height: 60px;
+  line-height: 1.5;
+  }
+  @media screen and (min-width: 577px) {
+  width: 370px;
+  height: 60px;
+  line-height: 1.5;
+  }
+  @media screen and (min-width: 769px) {
+  width: 448px;
+  height: 23px;
+  }
 }
 
 .form-group {
@@ -109,11 +144,26 @@
 
 .label-comment {
 margin-bottom: 4px;
+@media screen and (max-width: 769px) {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 12px;
+line-height: 1.16;
+}
+
 }
 
 .form-label {
-  display: inline-block;
-  margin-bottom: 4px;
+display: inline-block;
+margin-bottom: 4px;
+@media screen and (max-width: 769px) {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 12px;
+line-height: 1.16;
+}
 }
 
 .textarea {
@@ -155,7 +205,7 @@ margin-bottom: 4px;
 .form-checkbox input[type="checkbox"] {
   width: 16px;
   height: 15px;
-  margin-right: 7px;
+  margin-right: 8px;
 }
 
 .label-position {
@@ -197,6 +247,13 @@ margin-bottom: 4px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
+  @media screen and (max-width: 769px) {
+  font-size: 12px;
+  line-height: 1.16;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+  }
 }
 
 .checkbox-link {
@@ -257,7 +314,7 @@ margin-bottom: 4px;
 }
 
 .submit {
-  display: block;
-  margin-top: 30px;
-  padding-left: 125px;
+  display: flex;
+  justify-content: center;
+  margin-top: 30px; 
 }
