--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -2,11 +2,8 @@
   padding-top: 60px;
   padding-bottom: 60px;
 
-  @media screen and (min-width: 768px) {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  padding-left: 15px;
-  padding-right: 15px;
+  @media screen and (min-width: 767px) {
+  padding: 60px 0;
   }
   @media screen and (min-width: 1200px) {
    padding-top: 94px;
