--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,5 +1,6 @@
 .page-header {
   @media screen and (max-width: 480px) {
+    position: relative;
     display: flex;
     justify-content: center;
     padding-top: 16px;
@@ -10,17 +11,12 @@
 .main-nav {
   display: flex;
   align-items: center;
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 481px) {
   display: inline-block;
-  margin-left: 15px;
   padding: 0;
-  >.conteiner {
-  display: block;
-  }
  }
- @media screen and (max-width: 768px) {
+ @media screen and (min-width: 767px) {
   display: flex;
-  margin-left: 15px;
   padding: 0;
  }
  }
@@ -29,10 +25,16 @@
 .site-nav .logo {
   display: flex;
   margin-right: 93px;
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 481px) {
   display: inline-block;
   padding: 0;
   margin: 0;
+ }
+ @media screen and (min-width: 767px) {
+  margin-right: 88px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  // padding-left: 15px;
  }
 }
 
@@ -57,7 +59,7 @@ padding: 0;
   display: none;
  }
  @media screen and (min-width: 768px) {
-  margin-right: 95px;
+  margin-right: 90px;
  }
 }
 
@@ -70,8 +72,11 @@ padding: 0;
   &:last-child {
   margin-right: 0;
  }
-  @media screen and (min-width: 768px) {
-  margin-right: 25px;
+  @media screen and (min-width: 767px) {
+  margin-right: 51px;
+  &:first-child {
+  margin-right: 0;
+  }
  }
 }
 
@@ -130,15 +135,18 @@ padding: 0;
   color: inherit;
   color: var(--accent-color);
   }
+  @media screen and (min-width: 577px) {
+    margin-right: 56px;
+  }
 }
  
 
 
 .auth-nav {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 767px) {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+
   }
   
   @media screen and (min-width: 1200px) {
@@ -160,36 +168,20 @@ padding: 0;
   @media screen and (max-width: 767px) {
   display: none;
  }
-  @media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   display: block;
   padding-top: 20px;
   padding-bottom: 10px;
- 
+ }
+ @media screen and (min-width: 769px) {
+  display: flex;
+  flex-direction: column;
+  align-content: space-around;
+  flex-wrap: wrap;
  }
 }
 
 .auth-nav a {
-  @media screen and (min-width: 481px) {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--primary-text-color);
-  text-decoration: none;
-  transition: transform var(--transition-time), color var(--transition-time);
- }
-  @media screen and (min-width: 768px) {
-  display: flex;
-  flex-wrap: nowrap;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--primary-text-color);
-  text-decoration: none;
-  transition: transform var(--transition-time), color var(--transition-time);
- }
-  @media screen and (min-width: 1200px) {
   display: flex;
   align-items: center;
   font-weight: 500;
@@ -199,7 +191,14 @@ padding: 0;
   color: var(--primary-text-color);
   text-decoration: none;
   transition: transform var(--transition-time), color var(--transition-time);
-  }
+  @media screen and (min-width: 767px) {
+  font-size: 12px;
+  line-height: 1.16;
+   }
+    @media screen and (min-width: 1199px) {
+  font-size: 14px;
+  line-height: 1.14;
+   }
 }
 
 .auth-nav .link {
@@ -210,7 +209,7 @@ padding: 0;
 }
 
 .auth-nav .item {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 767px) {
   font-weight: 500;
   font-size: 12px;
   line-height: 1.16;
@@ -218,13 +217,21 @@ padding: 0;
   color: var(--primary-text-color);
   text-decoration: none;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1199px) {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
   text-decoration: none;
+  }
+}
+.auth-nav .item:not(:last-child) {
+  @media screen and (max-width: 1199px) {
+  margin-bottom: 10px;
+  }
+  @media screen and (min-width: 1200px) {
+  margin-right: 30px;
   }
 }
 
@@ -237,7 +244,10 @@ padding: 0;
   .auth-nav .link:hover &,
   .auth-nav .link:focus & {
   fill: var(--accent-color);
+  @media screen and (min-width: 767px) {
+    margin-right: 8px;
  }
+}
 }
 
 .icon-smartphone {
@@ -250,15 +260,20 @@ padding: 0;
   .auth-nav .link:focus & {
   fill: var(--accent-color);
   }
+   @media screen and (min-width: 767px) {
+    margin-right: 8px;
+ }
 }
 .menu-open-btn {
-  display: block;
-  margin-left: auto;
-  padding: 0;
+  position: absolute;
+  top: 50%;
+  left: 94%;
+  transform: translate(-50%, -50%) scaleX(1);
+  transition: transform var(--transition-time);
   background-color: transparent;
   border: none;
   @media screen and (min-width: 481px) {
-    display: none;
+  display: none;
   }
 }
 .menu-open-btn__icon-menu {
@@ -273,8 +288,10 @@ padding: 0;
  width: 100vw;
  height: 100vh;
  z-index: 1;
- padding-top: 48px;
+ padding-top: 21px;
  padding-bottom: 48px;
+ padding-left: 20px;
+ padding-right: 40px;
  >.conteiner {
   height: 100%;
   display: flex;
@@ -285,9 +302,13 @@ padding: 0;
 }
 .menu-close {
   display: block;
-  margin-left: auto;
+  margin-left: 396px;
   background-color: transparent;
   border: none;
+  &:focus,
+  &:hover {
+  fill: var(--accent-color);
+ }
  }
 
  .menu-close__icon-close {
@@ -302,9 +323,12 @@ padding: 0;
 .mobil-menu__list {
 margin-bottom: 50px;
 }
-.mobil-menu__item:not(:last-child) {
+.mobil-menu__item:not(:last-child :first-child) {
   margin-bottom: 32px;
+}
 
+.mobil-menu__item:first-child {
+margin-bottom: 35px;
 }
 .mobil-menu__link {
 font-family: 'Roboto';
@@ -316,11 +340,14 @@ letter-spacing: 0.02em;
 color: #212121;
 list-style: none;
 text-decoration: none;
-&:hover,
-&:focus {
-  color: var(--accent-color);
- }
 }
+
+.mobil-menu__link.activ {
+  &:focus,
+  &:hover {
+  color: var(--accent-color);
+  }
+ }
 
 // .mobil-menu link {
 // list-style: none;
@@ -337,6 +364,7 @@ text-decoration: none;
 .mobil-contact__item:not(:last-child) {
 margin-bottom: 32px;
 }
+
 .mobil-contact__link {
 font-family: 'Roboto';
 font-style: normal;
@@ -372,7 +400,11 @@ text-decoration: none;
 display: block;
 }
 .mobil-social__item:not(:last-child) {
-  border-right: 1px solid rgba(33, 33, 33, 0.2);
+border-right: 1px solid rgba(33, 33, 33, 0.2);
+&:hover,
+&:focus {
+border-right: 1px solid var(--accent-color);
+ }
 }
 
 .mobil-social__link {
