--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,17 +1,14 @@
 .section-hero {
   max-width: 1600px;
-  height: 400px;
-  width: 480px;
-  padding: 200px 0;
-  margin-left: auto;
-  margin-right: auto;
+  padding: 118px 0;
+  margin: 0 auto;
   text-align: center;
   background-color: var(--section-color);
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("../image/heroimg1x.jpg");
+    url("../image/heromobimg1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -23,28 +20,10 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("../image/heroimg2x.jpg");
-  }
-  @media screen and (max-width: 480px) {
-    width: 480px;
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url("../image/heromobimg1x.jpg");
-    @media (min-device-pixel-ratio: 2),
-  (-webkit-min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-   background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
     url("../image/heromobimg2x.jpg");
- }
-}
-  @media screen and (min-width: 481px) {
-  width: 769px;
+  }
+  @media screen and (min-width: 489px) {
+    padding: 118px 0;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
@@ -62,7 +41,7 @@
  }
 }
   @media screen and (min-width: 769px) {
-    width: 1200px;
+  padding: 200px 0;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
@@ -79,13 +58,31 @@
     url("../image/heroimg2x.jpg");
  }
 }
+//   @media screen and (min-width: 769px) {
+//     padding: 200px 0;
+//   background-image: linear-gradient(
+//       rgba(47, 48, 58, 0.4),
+//       rgba(47, 48, 58, 0.4)
+//     ),
+//     url("../image/heroimg1x.jpg");
+//     @media (min-device-pixel-ratio: 2),
+//   (-webkit-min-device-pixel-ratio: 2),
+//   (min-resolution: 192dpi),
+//   (min-resolution: 2dppx) {
+//    background-image: linear-gradient(
+//       rgba(47, 48, 58, 0.4),
+//       rgba(47, 48, 58, 0.4)
+//     ),
+//     url("../image/heroimg2x.jpg");
+//  }
+// }
 }
 .hero-title {
+  max-width: 696px;
   margin-top: 0;
   margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
-  max-width: 696px;
   color: var(--primary-bg-color);
   font-weight: 900;
   font-size: 26px;
@@ -93,4 +90,8 @@
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  @media screen and (min-width: 767px) {
+    width: 360px;
+    height: 84px;
+  }
 }
