--- a/sass/layouts/_img.scss
+++ b/sass/layouts/_img.scss
@@ -1,4 +1,7 @@
 .section__img {
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
   padding-top: 94px;
   padding-bottom: 94px;
   background-color: var(--primary-bg-color);
@@ -34,33 +37,34 @@
 }
 
 .img__item {
-  width: 100%;
-  @media screen and (max-width: 1199px) {
-  width: calc((100% - 60px) / 3);
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  margin: -1px;
- }
- 
-//   width: 370px;
-//   margin-right: 30px;
-//   margin-bottom: 0;
-//   &:nth-child(3n) {
-//   margin-right: 0;
+  // width: 100%;
+  // @media screen and (max-width: 1199px) {
+  //   display: none;
+  // width: calc((100% - 60px) / 3);
+  // position: absolute;
+  // white-space: nowrap;
+  // width: 1px;
+  // height: 1px;
+  // overflow: hidden;
+  // border: 0;
+  // padding: 0;
+  // clip-path: inset(100%);
+  // clip: rect(0 0 0 0);
+  // margin: -1px;
 //  }
+ 
+  width: 370px;
+  // margin-right: 30px;
+  margin-bottom: 0;
+  &:nth-child(3n) {
+  margin-right: 0;
+ }
 }
 
 .image {
   display: block;
   position: relative;
-  width: 374px;
+  // width: 374px;
   height: 294px;
 }
 
