--- a/sass/layouts/_logo.scss
+++ b/sass/layouts/_logo.scss
@@ -8,6 +8,11 @@
   text-decoration: none;
   span {
   color: var(--accent-color);
+    @media screen and (max-width: 481px) {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-left: 0;
+  }
  }
 }
 .site-nav .logo {
@@ -16,4 +21,9 @@
   font-size: 26px;
   line-height: 1.19;
   text-decoration: none;
+  @media screen and (max-width: 769px) {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.16;
+  }
 }
