--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -241,7 +241,8 @@ align-items: center;
   justify-content: center;
   }
   @media screen and (min-width: 1199px) {
-  margin-top: 20px;
+  // margin-top: 20px;
+  align-items: center;
   }
 }
 .footer__input {
@@ -257,15 +258,19 @@ align-items: center;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   background: #2f303a;
-  @media screen and (max-width: 769px) {
+  @media screen and (min-width: 768px) {
   width: 450px;
   margin-bottom: 20px;
   margin-top: 20px;
    }
-  @media screen and (max-width: 481px) {
+  @media screen and (min-width: 480px) {
   width: 450px;
   margin-bottom: 20px;
+  margin-top: 20px;
    }
+  @media screen and (min-width: 1200px) {
+  width: 358px;
+  }
 }
 .footer__contact__btn {
   width: 200px;
