--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -15,12 +15,14 @@
   display: inline-block;
   padding: 0;
  }
- @media screen and (min-width: 767px) {
+ @media screen and (max-width: 769px) {
   display: flex;
   padding: 0;
  }
+ @media screen and (min-width: 1199px) {
+  padding: 0;
  }
-
+}
 
 .site-nav .logo {
   display: flex;
@@ -30,11 +32,10 @@
   padding: 0;
   margin: 0;
  }
- @media screen and (min-width: 767px) {
+ @media screen and (min-width: 768px) {
   margin-right: 88px;
   padding-top: 25px;
   padding-bottom: 25px;
-  // padding-left: 15px;
  }
 }
 
